# dev_module

./: CMakeLists.txt  Dockerfile  cmake_autobuild.sh  main.cpp
Conan/: CMakeLists.txt  build_conan.sh  conanfile.py  main.cpp
OS/Linux/: inst_required_lib.sh
vm_source/: Initial deletion & assembly.sh  Vagrantfile  build_playbook.sh  build_vagrant.sh
vm_source/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
vm_source/config/: inventory
vm_source/playbook/: config.yaml  playbook_inst_docker.yaml  playbook_sql.yaml  playbook_update_install.yaml
